--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -58,7 +58,7 @@ import { mainNavigation } from '../data/navigation';
       <span class="footer__policies">
         <a href="/about/policies/nondiscrimination-policy/">Nondiscrimination Policy</a>
         <a href="/about/policies/privacy-policy/">Privacy Policy</a>
-        <a href="https://www.jointheleague.org/wp-content/uploads/2021/11/LOAP_SafeReopeningPlan.pdf" target="_blank" rel="noreferrer">Safe Reopening Plan</a>
+  <a href="/images/2021/11/LOAP_SafeReopeningPlan.pdf" target="_blank" rel="noreferrer">Safe Reopening Plan</a>
       </span>
     </div>
   </div>
