--- a/src/pages/about/impact/index.astro
+++ b/src/pages/about/impact/index.astro
@@ -21,14 +21,7 @@ import BaseLayout from '../../../layouts/BaseLayout.astro';
     <div class="container impact-report">
       <div class="impact-report__header">
         <h2>The League of Amazing Programmers Impact Report 2022–23</h2>
-        <a
-          class="button button--secondary"
-          href="https://www.jointheleague.org/wp-content/uploads/2023/12/The-League-of-Amazing-Programmers-Impact-Report-2022-23.pdf"
-          target="_blank"
-          rel="noreferrer"
-        >
-          Download PDF
-        </a>
+          <a class="impact-report__button" href="/images/2023/12/The-League-of-Amazing-Programmers-Impact-Report-2022-23.pdf" target="_blank" rel="noreferrer">Download the Impact Report</a>
       </div>
       <div class="impact-report__embed">
         <iframe
@@ -46,17 +39,17 @@ import BaseLayout from '../../../layouts/BaseLayout.astro';
       <div class="impact-links__column card">
         <h3>Form 990 Filings</h3>
         <ul class="list-reset impact-links__list">
-          <li><a href="https://www.jointheleague.org/wp-content/uploads/2023/12/2022_WTS_990_pg1.pdf" target="_blank" rel="noreferrer">2022 WTS 990</a></li>
-          <li><a href="https://www.jointheleague.org/wp-content/uploads/2023/12/2021_WTS_990_pg1.pdf" target="_blank" rel="noreferrer">2021 WTS 990</a></li>
-          <li><a href="https://www.jointheleague.org/wp-content/uploads/2023/12/2020_WTS_990.pdf" target="_blank" rel="noreferrer">2020 WTS 990</a></li>
-          <li><a href="https://www.jointheleague.org/wp-content/uploads/2023/12/2019_WTS_990_pg1.pdf" target="_blank" rel="noreferrer">2019 WTS 990</a></li>
+            <li><a href="/images/2023/12/2022_WTS_990_pg1.pdf" target="_blank" rel="noreferrer">2022 WTS 990</a></li>
+            <li><a href="/images/2023/12/2021_WTS_990_pg1.pdf" target="_blank" rel="noreferrer">2021 WTS 990</a></li>
+            <li><a href="/images/2023/12/2020_WTS_990.pdf" target="_blank" rel="noreferrer">2020 WTS 990</a></li>
+            <li><a href="/images/2023/12/2019_WTS_990_pg1.pdf" target="_blank" rel="noreferrer">2019 WTS 990</a></li>
         </ul>
       </div>
       <div class="impact-links__column card">
         <h3>Audited Financial Statements</h3>
         <ul class="list-reset impact-links__list">
-          <li><a href="https://www.jointheleague.org/wp-content/uploads/2023/12/2019-2020-WTS-Audited-Financial-Statements.pdf" target="_blank" rel="noreferrer">2019–2020 Audited Financials</a></li>
-          <li><a href="https://www.jointheleague.org/wp-content/uploads/2023/12/2017-2018-WTS-Audited-Financial-Statements.pdf" target="_blank" rel="noreferrer">2017–2018 Audited Financials</a></li>
+            <li><a href="/images/2023/12/2019-2020-WTS-Audited-Financial-Statements.pdf" target="_blank" rel="noreferrer">2019–2020 Audited Financials</a></li>
+            <li><a href="/images/2023/12/2017-2018-WTS-Audited-Financial-Statements.pdf" target="_blank" rel="noreferrer">2017–2018 Audited Financials</a></li>
         </ul>
       </div>
     </div>
