--- a/src/pages/about/policies/enroll/index.astro
+++ b/src/pages/about/policies/enroll/index.astro
@@ -17,7 +17,7 @@ import BaseLayout from '../../../../layouts/BaseLayout.astro';
       </div>
       <div class="hero__media">
         <img
-          src="https://www.jointheleague.org/wp-content/uploads/2021/12/current_students.png"
+          src="/images/2021/12/current_students.png"
           alt="Students working together in a coding class"
           loading="lazy"
         />
