--- a/src/pages/about/policies/nondiscrimination-policy/index.astro
+++ b/src/pages/about/policies/nondiscrimination-policy/index.astro
@@ -80,7 +80,7 @@ const sections = [
     id: 'resources',
     title: 'Additional Resources',
     body: `
-<p>Download the <a href="https://www.jointheleague.org/wp-content/uploads/2023/11/Student-Code-of-Conduct-09-2023.pdf" target="_blank" rel="noreferrer">Student Code of Conduct</a>.</p>
+<p>Download the <a href="/images/2023/11/Student-Code-of-Conduct-09-2023.pdf" target="_blank" rel="noreferrer">Student Code of Conduct</a>.</p>
 <p>Visit the <a href="https://www.cde.ca.gov/re/di/eo/" target="_blank" rel="noreferrer">California Department of Education Equal Opportunity and Access</a> page for more information.</p>
 `,
   },
