--- a/src/pages/programs/classes/python-vs-java/index.astro
+++ b/src/pages/programs/classes/python-vs-java/index.astro
@@ -77,13 +77,13 @@ const address = siteConfig.cv_classroom_address;
       <div class="grid grid--two language-grid">
         <CalloutCard class="language-card" title="Java Classes">
           <figure slot="media" class="language-card__media">
-            <img src="https://www.jointheleague.org/wp-content/uploads/2021/09/java.png" alt="Java program illustration" loading="lazy" />
+            <img src="/images/2021/09/java.png" alt="Java program illustration" loading="lazy" />
           </figure>
           <a class="button button--primary" href="/programs/classes/java/">Enroll in a Java Class</a>
         </CalloutCard>
         <CalloutCard class="language-card" title="Python Classes">
           <figure slot="media" class="language-card__media">
-            <img src="https://www.jointheleague.org/wp-content/uploads/2021/09/python.png" alt="Python program illustration" loading="lazy" />
+            <img src="/images/2021/09/python.png" alt="Python program illustration" loading="lazy" />
           </figure>
           <a class="button button--primary" href="/programs/classes/python/">Enroll in a Python Class</a>
         </CalloutCard>
