--- a/src/pages/programs/tech-club/code-clinic/index.astro
+++ b/src/pages/programs/tech-club/code-clinic/index.astro
@@ -47,7 +47,7 @@ const sessionTopics = [
       >
         <figure class="hero__media">
           <img
-            src="https://www.jointheleague.org/wp-content/uploads/2025/04/denimkids.jpeg"
+            src="/images/2025/04/denimkids.jpeg"
             alt="Students working together during an advanced coding workshop"
             loading="lazy"
           />
@@ -115,7 +115,7 @@ const sessionTopics = [
         </div>
         <figure class="try-card__media">
           <img
-            src="https://www.jointheleague.org/wp-content/uploads/2024/02/TheLEAGUEBlack-300x249.png"
+            src="/images/2024/02/TheLEAGUEBlack-300x249.png"
             alt="The League Tech Club logo"
             loading="lazy"
           />
