--- a/src/pages/programs/tech-club/robot-garage/index.astro
+++ b/src/pages/programs/tech-club/robot-garage/index.astro
@@ -52,7 +52,7 @@ const clinicLists = [
       >
         <figure class="hero__media">
           <img
-            src="https://www.jointheleague.org/wp-content/uploads/2024/06/IMG_4216.png"
+            src="/images/2024/06/IMG_4216.png"
             alt="Student programming a robot in the League Robot Garage"
             loading="lazy"
           />
@@ -76,7 +76,7 @@ const clinicLists = [
       <CalloutCard class="two-column__list">
         <figure slot="media" class="side-image">
           <img
-            src="https://www.jointheleague.org/wp-content/uploads/2024/06/IMG_3009-800x842.png"
+            src="/images/2024/06/IMG_3009-800x842.png"
             alt="Robot prototype built by students"
             loading="lazy"
           />
@@ -166,7 +166,7 @@ const clinicLists = [
         </div>
         <figure class="try-card__media">
           <img
-            src="https://www.jointheleague.org/wp-content/uploads/2024/06/IMG_2975-800x895.png"
+            src="/images/2024/06/IMG_2975-800x895.png"
             alt="Students soldering at the Tech Club"
             loading="lazy"
           />
