--- a/src/pages/about/policies/index.astro
+++ b/src/pages/about/policies/index.astro
@@ -68,7 +68,7 @@ const quickLinks = [
       </div>
       <div class="hero__media">
         <img
-          src="https://www.jointheleague.org/wp-content/uploads/2021/12/current_students.png"
+          src="/images/2021/12/current_students.png"
           alt="Students collaborating at The League"
           loading="lazy"
         />
