--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -9,9 +9,24 @@ import { siteSettings } from '../data/siteSettings';
       <span class="site-header__tagline" aria-hidden="true"></span>
       <nav aria-label="Utility">
         <ul class="list-reset site-header__utility-list">
-          {utilityLinks.map((link) => (
-            <li><a href={link.href}>{link.label}</a></li>
-          ))}
+          {utilityLinks.map((link) => {
+            let iconClass = '';
+            if (link.href.includes('tel:')) {
+              iconClass = 'fa-phone-alt fas';
+            } else if (link.label.includes('Location')) {
+              iconClass = 'fa-map-marker-alt fas';
+            } else if (link.label.includes('Client Portal')) {
+              iconClass = 'fa-user-graduate fas';
+            }
+            return (
+              <li>
+                <a href={link.href}>
+                  {iconClass && <i class={`${iconClass} utility-icon`} aria-hidden="true"></i>}
+                  <span>{link.label}</span>
+                </a>
+              </li>
+            );
+          })}
         </ul>
       </nav>
     </div>
@@ -19,7 +34,7 @@ import { siteSettings } from '../data/siteSettings';
   <div class="container site-header__main">
     <a class="site-header__logo" href="/">
       <img
-        src="/images/2022/01/logosymbol-e1641498341753.png"
+        src="/logos/flag-girl.png"
         alt={`${siteSettings.name} logo`}
         width="243"
         height="196"
