--- a/src/pages/programs/tech-club/programming-merit-badge/index.astro
+++ b/src/pages/programs/tech-club/programming-merit-badge/index.astro
@@ -10,7 +10,7 @@ const classOptions = [
     description:
       'Cover loops, variables, functions, and Turtle graphics to satisfy requirement 5 with the world\'s most popular language.',
     image: {
-      src: '/images/2024/03/python.png',
+      src: '/images/images/python.png',
       alt: 'Python icon',
     },
   },
@@ -28,7 +28,7 @@ const classOptions = [
     description:
       'Experience professional tooling such as VS Code and GitHub while writing programs in Java.',
     image: {
-      src: '/images/2024/03/java.png',
+      src: '/images/images/java.png',
       alt: 'Java icon',
     },
   },
